bwa-mem3-sys/shim/bwa_shim.h

typedef struct BwaIndex BwaIndex;
typedef struct BwaSeeds BwaSeeds;
typedef struct BwaBatch BwaBatch;
typedef struct BwaScratch BwaScratch;
typedef struct BwaRegs    BwaRegs;
typedef struct {
    const char    *r1_name;  size_t r1_name_len;
    const uint8_t *r1_seq;   size_t r1_seq_len;
    const uint8_t *r1_qual;
    const char    *r2_name;  size_t r2_name_len;
    const uint8_t *r2_seq;   size_t r2_seq_len;
    const uint8_t *r2_qual;
} BwaReadPair;
/* A single-end read. Layout mirrors the bridge's ShimSingleRead. */
typedef struct {
    const char    *name;  size_t name_len;
    const uint8_t *seq;   size_t seq_len;
    const uint8_t *qual;
} BwaSingleRead;
/* One work item: pairs (r1/r2 interleaved into seqs[0..2*n_pairs)) followed by
 * singles (seqs[2*n_pairs..)). Either slice may be empty. */
typedef struct {
    const BwaReadPair   *pairs;   size_t n_pairs;
    const BwaSingleRead *singles; size_t n_singles;
} BwaReadBatch;
/* Options lifecycle. `opts_new` returns a heap-allocated mem_opt_t populated
 * with bwa-mem3 defaults (mem_opt_init). `opts_free` releases it. Field-level
 * getters/setters will be added once the full mem_opt_t is bound to Rust. */
mem_opt_t *bwa_shim_opts_new(void);
void              bwa_shim_opts_free(mem_opt_t *opts);
/* D3 (--meth): (re)build the per-hypothesis bisulfite scoring matrices from the
 * base matrix per opts->meth_scoring. Call after changing meth_scoring. */
void              bwa_shim_opts_fill_meth_mat(mem_opt_t *opts);
/* Rebuild the 5x5 scoring matrix from opts->a / opts->b, then refresh the
 * bisulfite matrices derived from it. Call after changing either score.
 *
 * Writing `a`/`b` alone leaves the crate incoherent: several code paths read
 * them directly (bwamem.cpp:2200, 2296, 3449, 4130, ...) while the SW kernels
 * read only opts->mat, which still encodes the previous values. Upstream
 * always pairs the two (bwa_fill_scmat then mem_opt_fill_meth_mat --
 * fastmap.cpp:2726 and :2730, in main_mem), and mem_opt_fill_meth_mat's own
 * contract comment requires it after EVERY rebuild of opts->mat. */
void              bwa_shim_opts_fill_scmat(mem_opt_t *opts);
/* Set common single-integer fields; one function per semantically-distinct knob.
 * Returns 0 on success, non-zero if the key is unknown. */
int bwa_shim_opts_set_int(mem_opt_t *opts, const char *key, int value);
/* The @HD header line the active output-compatibility target calls for, without
 * a trailing newline, or NULL when the target emits no @HD.
 *
 * A caller writing its own SAM/BAM header must use this rather than a literal
 * of its own: `compat_target_t` is the one place that decides output shaping,
 * and upstream collapsed three drifted @HD literals into it for exactly that
 * reason (fg-labs/bwa-mem3#288). The string is static storage owned by the
 * compat table; do not free it. */
const char *bwa_shim_compat_hd_line(const mem_opt_t *opts);
/* Apply bwa-mem3's bwameth-compatibility defaults for `--meth`, then refill the
 * scoring matrices (the bundle can change `b`, so they would otherwise be
 * stale).
 *
 * Wraps upstream's `mem_opt_apply_meth_defaults`, so the constants scale with
 * the match score `a` exactly as upstream scales them.
 *
 * Ordering is not symmetric across the knobs involved:
 *   - `a` (`-A`) is an INPUT -- the constants are expressed in units of it --
 *     so set it BEFORE calling. So is `meth_scoring`: the `-B` branch keys off
 *     the resolved mode.
 *   - `T`/`pen_clip5`/`pen_clip3`/`pen_unpaired` (`-T`/`-L`/`-U`) are
 *     OVERWRITTEN unconditionally, because upstream's "user set this" mask is
 *     passed empty, so set any of those AFTER or they are silently clobbered.
 *   - `b` (`-B`) is overwritten ONLY under COLLAPSED scoring. GENOMIC and
 *     NEUTRAL keep bwa's default (bwamem.cpp:511-515), so a caller-set `-B`
 *     survives the bundle under those two modes. */
void bwa_shim_opts_apply_meth_defaults(mem_opt_t *opts);
/* PE-stats lifecycle. `pestat_zero` returns a zeroed 4-orientation array. */
mem_pestat_t *bwa_shim_pestat_zero(void);
void                 bwa_shim_pestat_free(mem_pestat_t *pestat);
BwaIndex *bwa_shim_idx_load(const char *prefix);
/* As bwa_shim_idx_load, loading the FM-index with `n_threads` (>= 1) threads —
 * the CLI's `-t` behavior for index load (fastmap.cpp:2868). `n_threads < 1`
 * is clamped to 1. */
BwaIndex *bwa_shim_idx_load_threads(const char *prefix, int n_threads);
/* D3 (--meth): load a dual index — `seed_prefix` = converted `<ref>.meth`,
 * `orig_prefix` = un-converted `<ref>`. Use with meth_mode set on the opts. */
BwaIndex *bwa_shim_idx_load_meth(const char *seed_prefix, const char *orig_prefix);
/* Non-zero iff `idx` is a --meth dual index (loaded via bwa_shim_idx_load_meth). */
int       bwa_shim_idx_is_meth(const BwaIndex *idx);
void      bwa_shim_idx_free(BwaIndex *idx);
size_t    bwa_shim_idx_n_contigs(const BwaIndex *idx);
const char *bwa_shim_idx_contig_name(const BwaIndex *idx, size_t i);
int64_t   bwa_shim_idx_contig_len(const BwaIndex *idx, size_t i);
BwaSeeds *bwa_shim_seed_batch(
    const BwaIndex *idx, const mem_opt_t *opts,
    const BwaReadPair *pairs, size_t n_pairs);
void bwa_shim_seeds_free(BwaSeeds *seeds);
BwaBatch *bwa_shim_extend_batch(
    const BwaIndex *idx, const mem_opt_t *opts,
    BwaSeeds *seeds,
    const BwaReadPair *pairs, size_t n_pairs,
    const mem_pestat_t *pestat_in,
    mem_pestat_t *pestat_out);
BwaBatch *bwa_shim_align_batch(
    const BwaIndex *idx, const mem_opt_t *opts,
    const BwaReadPair *pairs, size_t n_pairs,
    const mem_pestat_t *pestat_in,
    mem_pestat_t *pestat_out);
int bwa_shim_estimate_pestat(
    const BwaIndex *idx, const mem_opt_t *opts,
    const BwaReadPair *pairs, size_t n_pairs,
    mem_pestat_t *pestat_out);
/* ---- Three-phase API (caller-owned parallelism, cohort-exact output) ---- */

/* Per-thread reusable scratch: banded-SW buffers, SMEM buffers, chain/seed
 * windows, record-building buffers. ~24 MB after first use. Send, not Sync. */
BwaScratch *bwa_shim_scratch_new(void);
void        bwa_shim_scratch_free(BwaScratch *sc);
/* Phase 1: seed + single-end-extend every read of `batch` (the fused
 * `worker_bwt_aln` work). Per-read independent: safe to split a cohort into
 * any number of batches on any number of threads. Returns NULL + last_error
 * on failure. `opts` is never written. */
BwaRegs *bwa_shim_seed_extend(const BwaIndex *idx, const mem_opt_t *opts,
                              BwaScratch *sc, const BwaReadBatch *batch);
void     bwa_shim_regs_free(BwaRegs *r);
size_t   bwa_shim_regs_n_pairs(const BwaRegs *r);
size_t   bwa_shim_regs_n_singles(const BwaRegs *r);
/* Bytes held on the C heap by `r`: copied names/seqs/quals + alnreg arrays. */
size_t   bwa_shim_regs_heap_bytes(const BwaRegs *r);
/* Global read ordinals, reproducing bwa-mem3's worker_sam id formulas
 * (bwamem.cpp:2795-2884): pair i of this batch gets id first_pair_id + i
 * (== (n_processed >> 1) + pos in the CLI); single i gets first_single_id + i
 * (== n_processed + i). The caller derives both from the cohort's global
 * read offset and the SE/PE group layout (fastmap.cpp:924-944). */
typedef struct { uint64_t first_single_id; uint64_t first_pair_id; } BwaIdBases;