bwa-mem3-sys/shim/bwa_shim_types.h

/* Mirror of bwamem.h:95-156. Layout must match exactly. */
typedef struct mem_opt_t {
    int a, b;
    int o_del, e_del;
    int o_ins, e_ins;
    int pen_unpaired;
    int pen_clip5, pen_clip3;
    int w;
    int zdrop;

    uint64_t max_mem_intv;

    int T;
    int flag;
    int min_seed_len;
    int min_ext_len;
    int max_extend_chains;
    int mate_concordant_window;
    int est_insert_high;
    float extend_tie_frac;
    int extend_csub;
    int extend_tie_floor;
    /* upstream type is `seed_order_t`, a plain (int-sized) enum in bwamem.h;
     * mirrored as int for layout. The Rust API exposes it as the `SeedOrder`
     * enum (bwa-mem3-rs `MemOpts::seed_order`). */
    int seed_emit_order;
    int min_chain_weight;
    int max_chain_extend;
    float split_factor;
    int split_width;
    int max_occ;
    int max_chain_gap;
    int n_threads;
    int64_t chunk_size;
    float mask_level;
    float drop_ratio;
    float XA_drop_ratio;
    float mask_level_redun;
    float mapQ_coef_len;
    int mapQ_coef_fac;
    int max_ins;
    int max_matesw;
    /* v0.9.0 */
    int rescue_kmer;
    int rescue_band;
    int rescue_skip;
    int max_XA_hits, max_XA_hits_alt;
    int8_t mat[25];
    int8_t mat_ot[25];
    int8_t mat_ob[25];
    int    bam_mode;
    int    bam_level;
    int    bam_threads;
    int    meth_mode;
    int    meth_scoring;
    int    meth_seed_prune;
    /* v0.9.0 */
    int    meth_chem;
    int    meth_tags;
    char   meth_set_as_failed;
    int    meth_chimera_qc;
    /* v0.9.0 */
    int    proper_pair_from_emitted;
    int    supp_rep_hard_cap;
    int    smem_dedup;
    /* v0.9.0 */
    int    alnreg_sort_fast;
    int    skip_contained_ext;
    int    band_start;
    int    band_cert;
    /* v0.9.0. Upstream's type is `const compat_target_t *`; mirrored as an
     * opaque `const void *` because the POD only has to reproduce the LAYOUT
     * (pointer size and alignment), and pulling in compat_target_t would drag
     * the header graph bwa_shim.h exists to avoid. Nothing on the Rust side
     * reads it; bwa_shim_layout_assert.cpp checks the offset against the real
     * struct, which is what keeps this honest. */
    const void *compat;
} mem_opt_t;
/* Mirror of bwamem.h:239-243. */
typedef struct mem_pestat_t {
    int low, high;
    int failed;
    double avg, std;
} mem_pestat_t;