bwa-mem3-sys/src/bindings.rs

#[test]
fn bindgen_test_layout_BwaReadPair() {
    const UNINIT: ::std::mem::MaybeUninit<BwaReadPair> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<BwaReadPair>(),
        80usize,
        concat!("Size of: ", stringify!(BwaReadPair))
    );
    assert_eq!(
        ::std::mem::align_of::<BwaReadPair>(),
        8usize,
        concat!("Alignment of ", stringify!(BwaReadPair))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).r1_name) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(BwaReadPair),
            "::",
            stringify!(r1_name)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).r1_name_len) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(BwaReadPair),
            "::",
            stringify!(r1_name_len)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).r1_seq) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(BwaReadPair),
            "::",
            stringify!(r1_seq)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).r1_seq_len) as usize - ptr as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(BwaReadPair),
            "::",
            stringify!(r1_seq_len)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).r1_qual) as usize - ptr as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(BwaReadPair),
            "::",
            stringify!(r1_qual)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).r2_name) as usize - ptr as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(BwaReadPair),
            "::",
            stringify!(r2_name)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).r2_name_len) as usize - ptr as usize },
        48usize,
        concat!(
            "Offset of field: ",
            stringify!(BwaReadPair),
            "::",
            stringify!(r2_name_len)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).r2_seq) as usize - ptr as usize },
        56usize,
        concat!(
            "Offset of field: ",
            stringify!(BwaReadPair),
            "::",
            stringify!(r2_seq)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).r2_seq_len) as usize - ptr as usize },
        64usize,
        concat!(
            "Offset of field: ",
            stringify!(BwaReadPair),
            "::",
            stringify!(r2_seq_len)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).r2_qual) as usize - ptr as usize },
        72usize,
        concat!(
            "Offset of field: ",
            stringify!(BwaReadPair),
            "::",
            stringify!(r2_qual)
        )
    );
}
impl Default for BwaReadPair {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct BwaSingleRead {
    pub name: *const ::std::os::raw::c_char,
    pub name_len: usize,
    pub seq: *const u8,
    pub seq_len: usize,
    pub qual: *const u8,
}
#[test]
fn bindgen_test_layout_BwaSingleRead() {
    const UNINIT: ::std::mem::MaybeUninit<BwaSingleRead> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<BwaSingleRead>(),
        40usize,
        concat!("Size of: ", stringify!(BwaSingleRead))
    );
    assert_eq!(
        ::std::mem::align_of::<BwaSingleRead>(),
        8usize,
        concat!("Alignment of ", stringify!(BwaSingleRead))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).name) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(BwaSingleRead),
            "::",
            stringify!(name)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).name_len) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(BwaSingleRead),
            "::",
            stringify!(name_len)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).seq) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(BwaSingleRead),
            "::",
            stringify!(seq)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).seq_len) as usize - ptr as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(BwaSingleRead),
            "::",
            stringify!(seq_len)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).qual) as usize - ptr as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(BwaSingleRead),
            "::",
            stringify!(qual)
        )
    );
}
impl Default for BwaSingleRead {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct BwaReadBatch {
    pub pairs: *const BwaReadPair,
    pub n_pairs: usize,
    pub singles: *const BwaSingleRead,
    pub n_singles: usize,
}
#[test]
fn bindgen_test_layout_BwaReadBatch() {
    const UNINIT: ::std::mem::MaybeUninit<BwaReadBatch> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<BwaReadBatch>(),
        32usize,
        concat!("Size of: ", stringify!(BwaReadBatch))
    );
    assert_eq!(
        ::std::mem::align_of::<BwaReadBatch>(),
        8usize,
        concat!("Alignment of ", stringify!(BwaReadBatch))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).pairs) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(BwaReadBatch),
            "::",
            stringify!(pairs)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).n_pairs) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(BwaReadBatch),
            "::",
            stringify!(n_pairs)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).singles) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(BwaReadBatch),
            "::",
            stringify!(singles)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).n_singles) as usize - ptr as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(BwaReadBatch),
            "::",
            stringify!(n_singles)
        )
    );
}
impl Default for BwaReadBatch {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
extern "C" {
    pub fn bwa_shim_opts_new() -> *mut mem_opt_t;
}
extern "C" {
    pub fn bwa_shim_opts_free(opts: *mut mem_opt_t);
}
extern "C" {
    pub fn bwa_shim_opts_fill_meth_mat(opts: *mut mem_opt_t);
}
extern "C" {
    pub fn bwa_shim_opts_fill_scmat(opts: *mut mem_opt_t);
}
extern "C" {
    pub fn bwa_shim_opts_set_int(
        opts: *mut mem_opt_t,
        key: *const ::std::os::raw::c_char,
        value: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn bwa_shim_compat_hd_line(opts: *const mem_opt_t) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn bwa_shim_opts_apply_meth_defaults(opts: *mut mem_opt_t);
}
extern "C" {
    pub fn bwa_shim_pestat_zero() -> *mut mem_pestat_t;
}
extern "C" {
    pub fn bwa_shim_pestat_free(pestat: *mut mem_pestat_t);
}
extern "C" {
    pub fn bwa_shim_idx_load(prefix: *const ::std::os::raw::c_char) -> *mut BwaIndex;
}
extern "C" {
    pub fn bwa_shim_idx_load_threads(
        prefix: *const ::std::os::raw::c_char,
        n_threads: ::std::os::raw::c_int,
    ) -> *mut BwaIndex;
}
extern "C" {
    pub fn bwa_shim_idx_load_meth(
        seed_prefix: *const ::std::os::raw::c_char,
        orig_prefix: *const ::std::os::raw::c_char,
    ) -> *mut BwaIndex;
}
extern "C" {
    pub fn bwa_shim_idx_is_meth(idx: *const BwaIndex) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn bwa_shim_idx_free(idx: *mut BwaIndex);
}
extern "C" {
    pub fn bwa_shim_idx_n_contigs(idx: *const BwaIndex) -> usize;
}
extern "C" {
    pub fn bwa_shim_idx_contig_name(
        idx: *const BwaIndex,
        i: usize,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn bwa_shim_idx_contig_len(idx: *const BwaIndex, i: usize) -> i64;
}
extern "C" {
    pub fn bwa_shim_seed_batch(
        idx: *const BwaIndex,
        opts: *const mem_opt_t,
        pairs: *const BwaReadPair,
        n_pairs: usize,
    ) -> *mut BwaSeeds;
}
extern "C" {
    pub fn bwa_shim_seeds_free(seeds: *mut BwaSeeds);
}
extern "C" {
    pub fn bwa_shim_extend_batch(
        idx: *const BwaIndex,
        opts: *const mem_opt_t,
        seeds: *mut BwaSeeds,
        pairs: *const BwaReadPair,
        n_pairs: usize,
        pestat_in: *const mem_pestat_t,
        pestat_out: *mut mem_pestat_t,
    ) -> *mut BwaBatch;
}
extern "C" {
    pub fn bwa_shim_align_batch(
        idx: *const BwaIndex,
        opts: *const mem_opt_t,
        pairs: *const BwaReadPair,
        n_pairs: usize,
        pestat_in: *const mem_pestat_t,
        pestat_out: *mut mem_pestat_t,
    ) -> *mut BwaBatch;
}
extern "C" {
    pub fn bwa_shim_estimate_pestat(
        idx: *const BwaIndex,
        opts: *const mem_opt_t,
        pairs: *const BwaReadPair,
        n_pairs: usize,
        pestat_out: *mut mem_pestat_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn bwa_shim_scratch_new() -> *mut BwaScratch;
}
extern "C" {
    pub fn bwa_shim_scratch_free(sc: *mut BwaScratch);
}
extern "C" {
    pub fn bwa_shim_seed_extend(
        idx: *const BwaIndex,
        opts: *const mem_opt_t,
        sc: *mut BwaScratch,
        batch: *const BwaReadBatch,
    ) -> *mut BwaRegs;
}
extern "C" {
    pub fn bwa_shim_regs_free(r: *mut BwaRegs);
}
extern "C" {
    pub fn bwa_shim_regs_n_pairs(r: *const BwaRegs) -> usize;
}
extern "C" {
    pub fn bwa_shim_regs_n_singles(r: *const BwaRegs) -> usize;
}
extern "C" {
    pub fn bwa_shim_regs_heap_bytes(r: *const BwaRegs) -> usize;
}
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct BwaIdBases {
    pub first_single_id: u64,
    pub first_pair_id: u64,
}
